--- a/src/app/components/challenges/code-display/code-display.html
+++ b/src/app/components/challenges/code-display/code-display.html
@@ -1,12 +1,27 @@
-<div class="code-container">
-  <h3>Código de {{username || 'la solución'}}</h3>
-  <div *ngIf="code">
-    <pre><code [class]="'language-' + language">{{ code }}</code></pre>
-  </div>
-  <div *ngIf="!code" class="alert alert-info">
-    No hay código disponible para mostrar.
-  </div>
-  <div class="actions">
-    <button mat-raised-button color="primary" (click)="close()">Cerrar</button>
+<div class="code-display-dialog">
+  <div class="code-container">
+    <h3>
+      <i class="bi bi-code-slash"></i>
+      Código de {{username || 'la solución'}}
+    </h3>
+    
+    <div class="code-content">
+      <div *ngIf="code; else noCode">
+        <pre><code [class]="'language-' + language">{{ code }}</code></pre>
+      </div>
+      
+      <ng-template #noCode>
+        <div class="no-code">
+          <i class="bi bi-file-earmark-x"></i>
+          No hay código disponible para mostrar
+        </div>
+      </ng-template>
+    </div>
+    
+    <div class="actions">
+      <button mat-button (click)="close()">
+        <i class="bi bi-x-lg"></i> Cerrar
+      </button>
+    </div>
   </div>
 </div>
