icono y stilos de perfil mejorado editar y actulizar

--- a/src/app/components/challenges/challenge-detail/challenge-detail.html
+++ b/src/app/components/challenges/challenge-detail/challenge-detail.html
@@ -99,7 +99,7 @@
             <h5 class="card-title">Clasificación</h5>
             <app-leaderboard
               [participations]="participations"
-              [isChallengeEnded]="challenge?.status === 'pasado'"
+              [isChallengeEnded]="challenge.status === 'pasado'"
               [showScores]="showScores || isAdmin"
             ></app-leaderboard>
           </div>
