--- a/src/app/components/shared/header/header.html
+++ b/src/app/components/shared/header/header.html
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand d-flex align-items-center" routerLink="/">
-      <span>ByteBattle</span>
-      <span class="terminal-cursor ms-1"></span>
-    </a>
+  <span>ByteBattle</span>
+  <span class="blinking-arrow ms-1 me-1">></span>
+  <span class="terminal-cursor"></span>
+  <img src="../../../../assets/icono.ico" alt="Logo" class="logo-icon ms-1">
+</a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <!-- Enlaces principales -->
       <ul class="navbar-nav me-auto">
