dashboard bien implementado

--- a/src/app/components/shared/header/header.html
+++ b/src/app/components/shared/header/header.html
@@ -4,7 +4,7 @@
   <span>ByteBattle</span>
   <span class="blinking-arrow ms-1 me-1">></span>
   <span class="terminal-cursor"></span>
-  <img src="../../../../assets/icono.ico" alt="Logo" class="logo-icon ms-1">
+  <img src="icono.ico" alt="Logo" class="logo-icon ms-1">
 </a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <!-- Enlaces principales -->
