arreglar ganador admin

--- a/src/app/components/challenges/leaderboard/leaderboard.html
+++ b/src/app/components/challenges/leaderboard/leaderboard.html
@@ -7,7 +7,7 @@
         <tr>
           <th>#</th>
           <th>Usuario</th>
-          <th>Puntaje</th>
+          <th>Posicion</th>
           <th *ngIf="isChallengeEnded">Código</th>
         </tr>
       </thead>
