--- a/src/app/components/challenges/score-submission/score-submission.html
+++ b/src/app/components/challenges/score-submission/score-submission.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="form-group">
-    <label for="score">Puntaje</label>
+    <label for="score">Posicion</label>
     <input 
       type="number" 
       id="score" 
